hello microverse title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <h1 class="title">Hello Mircroverse!</h1>
+    <h1 class="title">Hello Mircroverse!!</h1>
   </header>
 </body>
 
